--- a/src/index.ejs
+++ b/src/index.ejs
@@ -54,10 +54,10 @@
       "imports": {
         "react": "https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js",
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js",
-        "@cn/root-config": "//localhost:9000/cn-root-config.js",
-        "@cn/mf-header": "https://portafolio-cn-mf-header.herokuapp.com/main.js",
-        "@cn/mf-footer": "//localhost:4202/main.js",
-        "@cn/mf-portal": "//localhost:4203/main.js",
+        "@cn/root-config": "https://cn-root-config.herokuapp.com/cn-root-config.js",
+        "@cn/mf-header": "https://cn-mf-header.herokuapp.com/main.js",
+        "@cn/mf-footer": "https://cn-mf-footer.herokuapp.com/main.js",
+        "@cn/mf-portal": "https://cn-mf-portal.herokuapp.com/main.js",
         "@cn/mf-angular": "//localhost:4204/main.js",
         "@cn/mf-react-portal": "//localhost:4205/cn-mf-react-portal.js",
         "@cn/mf-vue": "//localhost:4206/js/app.js",        
