--- a/src/index.ejs
+++ b/src/index.ejs
@@ -88,7 +88,7 @@
   <header>
     <section id="single-spa-application:@cn/mf-header"></section>
   </header>
-  <main">
+  <main>
     <section id="single-spa-application:@cn/mf-portal"></section>
     <section id="single-spa-application:@cn/mf-angular"></section>
     <section id="single-spa-application:@cn/mf-svelte"></section>
