correccion root config

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,17 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "react": "https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js",
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js",
+        "@cn/root-config": "https://cn-root-config.herokuapp.com/cn-root-config.js",
+        "@cn/mf-header": "https://cn-mf-header.herokuapp.com/main.js",
+        "@cn/mf-footer": "https://cn-mf-footer.herokuapp.com/main.js",
+        "@cn/mf-portal": "https://cn-mf-portal.herokuapp.com/main.js",
+        "@cn/mf-angular": "//localhost:4204/main.js",
+        "@cn/mf-react-portal": "//localhost:4205/cn-mf-react-portal.js",
+        "@cn/mf-vue": "//localhost:4206/js/app.js",        
+        "@cn/mf-svelte": "//localhost:4207/cn-mf-svelte.js"
       }
     }
   </script>
