--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,8 +16,9 @@
     This CSP allows any SSL-enabled host and for arbitrary eval(), but you should limit these directives further to increase your app's security.
     Learn more about CSP policies at https://content-security-policy.com/#directive
   -->
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https: cn-root-config.herokuapp.com:*; script-src 'unsafe-inline' 'unsafe-eval' https: cn-root-config.herokuapp.com:*; connect-src https: cn-root-config.herokuapp.com:* ws://cn-root-config.herokuapp.com:*; img-src data:; style-src 'unsafe-inline' https:; object-src 'none';">
+  <meta http-equiv="Content-Security-Policy" content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *">
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
